# url-migration-checker

./: .gitignore  README.md  cursor_list_of_urls_for_sheet.md  pyproject.toml
url_migration_checker/: checker.py  cli.py
